# Physarum

./: .gitignore  LICENSE.md  README.md  requirements.txt
app/: app.py  config.py  engine.py  main.py  main_with_trace.py  test.py  time_it.py
app/models/: particle.py
app/particles/: particle_system.py  particle_system_with_trace.py
app/particles/tools/: __init__.py  deposit_pheromone.py  get_sensor_positions.py  sample_particles.py  sample_particles_with_trace.py  sample_sensors.py  sample_sensors_with_trace.py  update_angles.py  update_positions.py
app/processing/: pipeline.py
app/processing/shaders/: __init__.py  decay.py  diffuse.py  diffuse_and_decay.py  particle_update.py  particle_update_with_trace.py  pheromone_deposit.py
app/shaders/: __init__.py  base_shader.py  decay.py  diffuse.py  diffuse_and_decay.py
app/utils/: __init__.py  scale.py
physarum-app/: README.md  main.py  main_with_trace.py  pyproject.toml
physarum-app/app/: config.py  engine.py  engine_with_trace.py
physarum-app/app/assets/: krakow.pgw
physarum-app/app/particles/: particle_factory.py  particle_system.py  particle_system_with_trace.py
physarum-app/app/particles/tools/: __init__.py  deposit_pheromone.py  sample_particles.py  sample_sensors.py  update_angles.py
physarum-app/app/processing/shaders/: __init__.py  base_shader.py  decay.py  diffuse.py  diffuse_and_decay.py  particle_update.py
physarum-app/app/utils/: test.py  time_it.py
preprocessing/: calculate-population-density.ipynb  pyproject.toml
